--- a/Szperacz.Wpf/MainWindow.xaml
+++ b/Szperacz.Wpf/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:p="clr-namespace:Szperacz.Wpf.Properties"           
         xmlns:local="clr-namespace:Szperacz.Wpf"
-        mc:Ignorable="d"
+        mc:Ignorable="d" Closing="MvxWindow_Closing"
         Title="{x:Static p:Resources.AppName}" Height="720" Width="1280" MinWidth="700" MinHeight="450" WindowStartupLocation="CenterScreen">
     <Grid>
 
